--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,8 @@ p {
     width: 80%;
     height: 100%;
 
+    border-radius: 25px;
+
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
     text-indent: 50px;
